# src/docs/swagger.json
@@ -508,6 +508,11 @@
         },
         "/group/{token}": {
             "get": {
+                "security": [
+                    {
+                        "AuthToken": []
+                    }
+                ],
                 "description": "Return the group dto if successfully",
                 "consumes": [
                     "application/json"
@@ -1127,6 +1132,7 @@
         "dto.UserDto": {
             "type": "object",
             "required": [
+                "can_select_baan",
                 "firstname",
                 "lastname",
                 "line_id",
